fix: 🐛 sidebar fold issue on mobile

--- a/gh-pages/component/Header/style.module.css
+++ b/gh-pages/component/Header/style.module.css
@@ -8,8 +8,10 @@
     position: fixed;
     z-index: 2;
     background: palette(background);
-    &.fold {
-        width: calc(100vw - 16rem);
+    @mixin query 72rem {
+        &.fold {
+            width: calc(100vw - 16rem);
+        }
     }
 }
 
